--- a/styles/small.css
+++ b/styles/small.css
@@ -53,7 +53,8 @@ nav {
 
 nav a {
     padding: .75rem;
-    color: white;
+    color: #FFFFFF;
+    background-color: #2f2f2f;
     text-decoration: none;
     border-top: 1px solid #444;
 }
@@ -61,6 +62,7 @@ nav a {
 nav a:hover,
 nav .active {
     background: #555;
+    color: #FFFFFF;
 }
 
 nav.open {
